--- a/download.qmd
+++ b/download.qmd
@@ -49,6 +49,6 @@ Truth Commission Coding Manual: [pdf](https://www.transitionaljusticedata.com/fi
 
 ## Feedback and Corrections
 
-The Collaborative welcomes and encourages [Feedback](https://www.transitionaljusticedata.com/feedback) from country experts. With such feedback, we hope to continue to improve the currently available data. We will review your comments, research them, verify them, and make emendations if necessary.
+The Collaborative welcomes and encourages [Feedback](feedback.html) from country experts. With such feedback, we hope to continue to improve the currently available data. We will review your comments, research them, verify them, and make emendations if necessary.
 
 {{< include _footer.qmd >}}
