--- a/download.qmd
+++ b/download.qmd
@@ -25,7 +25,7 @@ Schrodt, Philip A. 2014. "Seven Deadly Sins of Contemporary Quantitative Politic
 
 ## Replication Data
 
-Below are the replication data for our most recent publications. They do not include the full spectrum of data availalbe to browse or query, but they are tailored to specific research questions that we have. If you would like data to answer a specific research question, email Geoff Dancy at **gdancy\@tulane.edu** for more information.
+Below are the replication data for our most recent publications. They do not include the full spectrum of data availalbe to browse or query, but they are tailored to specific research questions that we have. If you would like data to answer a specific research question, email Geoff Dancy at **[geoff.dancy@utoronto.ca](mailto:geoff.dancy@utoronto.ca)** for more information.
 
 Dancy, Geoff, Bridget Marchesi, Tricia Olsen, Leigh A. Payne, Andrew Reiter, and Kathryn Sikkink. 2019. "Behind Bars and Bargains: New Findings on Transitional Justice in Emerging Democracies" Forthcoming, *International Studies Quarterly*.
 
