--- a/feedback.qmd
+++ b/feedback.qmd
@@ -3,6 +3,6 @@ title: "Feedback"
 editor: source
 ---
 
-Your feedback is highly appreciated. Please provide any feedback about the website or the data by email to ...
+Your feedback is highly appreciated. Please provide any feedback about the website or the data to Geoff Dancy at [geoff.dancy@utoronto.ca](mailto:geoff.dancy@utoronto.ca).
 
 {{< include _footer.qmd >}}
