--- a/findings.qmd
+++ b/findings.qmd
@@ -113,12 +113,12 @@ Geoff and Eric Wiebelhaus-Brahm. 2019. "Data on Accountability in Post-Conflict 
 
 Dancy, Geoff. 2019. "Achieving an Unpopular Balance: Colombian Post-Conflict Justice and Amnesty in Comparative Perspective" in *Challenges for Peace and Transitional Justice in Colombia*, eds. Jacqueline DeMerrit and James Meernik. New York: Cambridge University Press.
 
-### 2020
+<!-- ### 2020 -->
 
-### 2021
+<!-- ### 2021 -->
 
-Dancy, Geoff and Oskar Timo Thoms. 2021. "Do Truth Commissions Improve Democracy?" Forthcoming in *Comparative Political Studies.*
+<!-- Dancy, Geoff and Oskar Timo Thoms. 2021. "Do Truth Commissions Improve Democracy?" Forthcoming in *Comparative Political Studies.* -->
 
-Dancy, Geoff and Kathryn Sikkink. 2021. "The Data of Transitional Justice." Forthcoming in *The Oxford Handbook of Transitional Justice*, eds. Jens Meierhenrich, Alexander Laban Hinton, and Lawrence Douglas. Oxford University Press.
+<!-- Dancy, Geoff and Kathryn Sikkink. 2021. "The Data of Transitional Justice." Forthcoming in *The Oxford Handbook of Transitional Justice*, eds. Jens Meierhenrich, Alexander Laban Hinton, and Lawrence Douglas. Oxford University Press. -->
 
 {{< include _footer.qmd >}}
