--- a/browse.qmd
+++ b/browse.qmd
@@ -41,10 +41,6 @@ df <- read_csv("_data/amnesties.csv") %>%
 
 htmltools::browsable(
   tagList(
-    tags$button(
-      "Expand/collapse all",
-      onclick = "Reactable.toggleAllRowsExpanded('amnesties-temp')"
-    ),
     df %>% 
       reactable(searchable = TRUE, 
                 filterable = TRUE,
@@ -65,7 +61,9 @@ htmltools::browsable(
                 paginationType = "jump",
                 defaultColDef = colDef(minWidth = 100),
                 columns = list(
-                  amnestyID = colDef(name = "ID", filterable = FALSE),
+                  amnestyID = colDef(name = "ID", 
+                                     filterable = FALSE,
+                                     width = 60),
                   # Narrative = colDef(minWidth = 400),
                   Narrative = colDef(show = FALSE, searchable = TRUE),
                   country = colDef(
@@ -91,17 +89,11 @@ htmltools::browsable(
                 elementId = "amnesties-temp"
       ),
     tags$button(
-      tagList(fontawesome::fa("download"), "Download as CSV"),
-      onclick = "Reactable.downloadDataCSV('amnesties-temp', 'amnesties.csv')"
+      "Expand/collapse all",
+      onclick = "Reactable.toggleAllRowsExpanded('amnesties-temp')"
     )
   )
 )
-
-
-
-
-
-
 ```
 
 ## Challenges 
