--- a/download.qmd
+++ b/download.qmd
@@ -39,13 +39,13 @@ Dancy, Geoff, Francesca Lessa, Bridget Marchesi, Leigh A. Payne, Gabriel Pereira
 
 ## Coding Manuals
 
-Democratic Transitions, 1970-2010: [pdf](https://www.transitionaljusticedata.com/files/demo%20transitions.pdf)
+Democratic Transitions, 1970-2010: [pdf](files/DemoTransitions.pdf)
 
-Domestic Criminal Prosecutions Coding Manual: [pdf](https://www.transitionaljusticedata.com/files/Trials%20Coding%20Manual.pdf)
+Domestic Criminal Prosecutions Coding Manual: [pdf](files/TrialsCodingManual.pdf)
 
-Amnesty Coding Manual: [pdf](https://www.transitionaljusticedata.com/files/Amnesty%20Coding%20Manual.pdf)
+Amnesty Coding Manual: [pdf](files/AmnestyCodingManual.pdf)
 
-Truth Commission Coding Manual: [pdf](https://www.transitionaljusticedata.com/files/Truth%20Commission%20Coding%20Manual.pdf)
+Truth Commission Coding Manual: [pdf](files/TruthCommissionCodingManual.pdf)
 
 ## Feedback and Corrections
 
